gen/analytics/v2.4/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-analytics2d4 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/analytics/v2.4/lib)
error[E0423]: expected value, found struct `accounts::AccountsActions`
   --> gen/analytics/v2.4/lib/src/lib.rs:246:13
    |
246 |             accounts::AccountsActions
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `accounts::AccountsActions { /* fields */ }`?

error[E0423]: expected value, found struct `goals::GoalsActions`
   --> gen/analytics/v2.4/lib/src/lib.rs:250:13
    |
250 |             goals::GoalsActions
    |             ^^^^^^^^^^^^^^^^^^^ did you mean `goals::GoalsActions { /* fields */ }`?

error[E0423]: expected value, found struct `profiles::ProfilesActions`
   --> gen/analytics/v2.4/lib/src/lib.rs:254:13
    |
254 |             profiles::ProfilesActions
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `profiles::ProfilesActions { /* fields */ }`?

error[E0423]: expected value, found struct `segments::SegmentsActions`
   --> gen/analytics/v2.4/lib/src/lib.rs:258:13
    |
258 |             segments::SegmentsActions
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `segments::SegmentsActions { /* fields */ }`?

error[E0423]: expected value, found struct `webproperties::WebpropertiesActions`
   --> gen/analytics/v2.4/lib/src/lib.rs:262:13
    |
262 |             webproperties::WebpropertiesActions
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `webproperties::WebpropertiesActions { /* fields */ }`?

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-analytics2d4`.

To learn more, run the command again with --verbose.
